# OneStopParallel

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  main_config.json  main_config_no_copt.json  main_partition.cpp  main_partition_config.json  perf.data  run-clang-tidy.py
.githooks/: CMakeLists.txt  pre-commit
apps/: CMakeLists.txt  OneStopParallel.cpp  bsp_test_suite.cpp  coarser_plotter.cpp  graph_analyser.cpp  graph_converter.cpp  ilp_bsp_scheduler.cpp  ilp_hypergraph_partitioner.cpp  ilp_partitioning_test_suite.cpp  ilp_scheduler_app.cpp  kl_profile.cpp  maxbsp_ssp_sptrsv.cpp  moe_test.cpp  osp.cpp  osp_turnus.cpp  sptrsv_test_suite.cpp  test_suite_bsp_schedulers.cpp
apps/config/: bsp_test_suite_config.json  osp_config.json  partitioning_test_suite_config.json  sptrsv_test_suite_config.json
apps/graph_generator/: CMakeLists.txt  gen_Erdos-Renyi_graph.cpp  gen_near_diag_random_graph.cpp  post_incomplete_cholesky.cpp
apps/moe/: moe_ilp.hpp  moe_util.hpp
apps/test_suite_runner/: AbstractTestSuiteRunner.hpp  BspScheduleRecompTestSuiteRunner.hpp  BspScheduleTestSuiteRunner.hpp  ConfigParser.hpp  PartitioningTestSuiteRunner.hpp  PebblingTestSuiteRunner.hpp
apps/test_suite_runner/StatsModules/: BasicBspStatsModule.hpp  BspCommStatsModule.hpp  BspSptrsvStatsModule.hpp  GraphStatsModule.hpp  IStatsModule.hpp
apps/test_suite_runner/StringToScheduler/: get_coarser.hpp  run_bsp_recomp_scheduler.hpp  run_bsp_scheduler.hpp  run_partitioner.hpp  run_pebbler.hpp
apps/util/: AbstractTestSuiteRunner.hpp  BspScheduleRecompTestSuiteRunner.hpp  BspScheduleTestSuiteRunner.hpp  CommandLineParser.hpp  ConfigParser.hpp  PebblingTestSuiteRunner.hpp  run_bsp_scheduler.hpp
apps/util/BspScheduleStatistics/: BasicBspStatistics.hpp  CommStatsModule.hpp  IStatisticsModule.hpp
apps/util/StatisticModules/: BasicBspStatistics.hpp  BspCommStatsModule.hpp  BspSptrsvStatistics.hpp  IStatisticsModule.hpp
examples/: CMakeLists.txt  example.cpp  gen_Erdos-Renyi_graph.cpp  gen_near_diag_random_graph.cpp  graph_analyser.cpp  spmv_example.cpp
examples/instances/: instance_bicgstab.txt
src/: CMakeLists.txt
src/algorithms/: CommunicationScheduler.cpp  ImprovementScheduler.cpp  InstanceContractor.cpp  Scheduler.cpp
src/algorithms/Coarsers/: CacheLineGluer.cpp  FastLane.cpp  Funnel.cpp  HDaggCoarser.cpp  SquashA.cpp  TreesUnited.cpp  WavefrontCoarser.cpp  WorkNoTalk.cpp
src/algorithms/ContractRefineScheduler/: BalDMixR.cpp  CoBalDMixR.cpp  MultiLevelHillClimbing.cpp  contract_refine_scheduler.cpp
src/algorithms/GreedySchedulers/: ClassicSchedule.cpp  GreedyBspFillupScheduler.cpp  GreedyBspLocking.cpp  GreedyBspScheduler.cpp  GreedyChildren.cpp  GreedyCilkScheduler.cpp  GreedyEtfScheduler.cpp  GreedyLayers.cpp  GreedyVarianceFillupScheduler.cpp  GreedyVarianceScheduler.cpp  MetaGreedyScheduler.cpp  RandomBadGreedy.cpp  RandomGreedy.cpp
src/algorithms/HDagg/: HDagg_simple.cpp
src/algorithms/IlpSchedulers/: CoptCommunicationScheduleOptimizer.cpp  CoptDirectSendingFullScheduler.cpp  CoptFullScheduler.cpp  CoptPartialScheduler.cpp  CoptPosetScheduler.cpp  TotalCommunicationScheduler.cpp
src/algorithms/LocalSearchSchedulers/: HillClimbingScheduler.cpp  LKBufferedCommScheduler.cpp  LKTotalCommScheduler.cpp
src/algorithms/Minimal_matching/: Hungarian_alg_process_permuter.cpp  Hungarian_algorithm.cpp  Numa_processor_reordering_heuristic.cpp
src/algorithms/Partitioners/: binpacking_partitioner.cpp  (+4 more)
src/auxiliary/: Balanced_Coin_Flips.cpp  Erdos_Renyi_graph.cpp  auxiliary.cpp  misc.cpp  near_diagonal_random_graph.cpp  run_algorithm.cpp
src/coarsen/: coarsen_history.cpp
src/coarser/: BspScheduleCoarser.cpp  Coarser.cpp
src/dag_divider/: IsomorphismGroups.cpp  WavefrontComponentDivider.cpp  WavefrontComponentScheduler.cpp  WavefrontParallelismDivider.cpp
src/dag_partitioners/: IListPartitioner.cpp  LightEdgeVariancePartitioner.cpp  Partitioner.cpp  VariancePartitioner.cpp
src/file_interactions/: BspScheduleWriter.cpp  DAGPartitionWriter.cpp  FileReader.cpp  FileWriter.cpp
src/io/: arch_file_reader.cpp
src/model/: BspArchitecture.cpp  BspMemSchedule.cpp  BspSchedule.cpp  BspScheduleRecompute.cpp  ComputationalDag.cpp  DAGPartition.cpp  SetSchedule.cpp  SmSchedule.cpp  SparseMatrix.cpp  SspSchedule.cpp  VectorSchedule.cpp
src/refine/: new_superstep.cpp  superstep_clumps.cpp
src/scheduler/: CommunicationScheduler.cpp  ImprovementScheduler.cpp  InstanceContractor.cpp  ReverseScheduler.cpp  SSPImprovementScheduler.cpp  SSPInstanceContractor.cpp  SSPScheduler.cpp  Scheduler.cpp
src/schedulers/: hill_climbing.cpp  multilevel.cpp
src/simulation/: BspSptrsvCSR.cpp  SmSptrsvCSR.cpp
src/structures/: bsp.cpp  dag.cpp  schedule.cpp
test_suite/: CMakeLists.txt  bsp_test_suite_config.json  cluster_test_suite.py  config_test.json  mem_config_test.json  run_test_suite.py  run_test_suite_SM.py  test_suite_bsp_schedulers.cpp  test_suite_config.json  test_suite_config_SM.json  test_suite_execution.cpp  test_suite_execution_SM.cpp  test_suite_mem_schedulers.cpp
tests/: CMakeLists.txt  ComputationalDag.cpp  DAG.cpp  SM_instance_scheduler.cpp  aligned_allocator.cpp  approx_edge_reduction.cpp  balanced_coin_flips.cpp  bit_mask.cpp  boost_bfs.cpp  boost_graph_adaptor.cpp  bsp_architecture.cpp  bsp_greedy_recomputer.cpp  bsp_improvementschedulers.cpp  bsp_instance.cpp  bsp_mem_schedule_class.cpp  bsp_schedule.cpp  bsp_schedule_recomp.cpp  bsp_schedulers.cpp  bsp_schedulers_csr.cpp  bsp_schedulers_mem_const.cpp  bsp_schedulers_with_node_types.cpp  coarse_refine_scheduler.cpp  coarsen_history.cpp  coarser.cpp  coarser_util.cpp  compact_sparse_graph.cpp  compact_sparse_graph_edge_desc.cpp  connected_components_part.cpp  cost_evaluation.cpp  cuthill_mckee.cpp  dag_partitioners.cpp  debug_merkle_divider.cpp  directed_graph_algorithms.cpp  directed_graph_top_sort.cpp  directed_graph_util.cpp  divisors.cpp  eft_subgraph_scheduler.cpp  filereader.cpp  graph_vector_adapter.cpp  graph_vector_edge_desc_impl.cpp  (+70 more)
tests/include/: DummyScheduler.hpp
(+830 files in other folders)
